--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examen Final </title>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
   </head>
   <body>
@@ -23,7 +23,7 @@
     </header>
     <section class ="contenido">
       <div class="primera">
-        <img src="imagenes/0001.jpg" alt="marea">
+        <img src="img/0001.jpg" alt="marea">
       </div>
 
 
@@ -31,11 +31,11 @@
 
     <section class="secundaria">
       <div class="uno">
-        <img class="imagenI"src="imagenes/0005.jpg" alt="foto">
+        <img class="imagenI"src="img/0005.jpg" alt="foto">
         <p><h2>Paisajes</h2></p>
       </div>
       <div class="dos">
-        <img class="imagenD"src="imagenes/14.jpg" alt="prueva">
+        <img class="imagenD"src="img/14.jpg" alt="prueva">
         <p><h2>Retratos</h2></p>
       </div>
 
