--- a/paisajes.html
+++ b/paisajes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examen Final </title>
       <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div class="container">
@@ -23,26 +23,26 @@
 
           <section class ="imagenes">
             <div class="f1">
-              <img src="imagenes/p1.png" alt="almar">
+              <img src="img/p1.png" alt="almar">
               </div>
               <div class="f2">
-                  <img src="imagenes/p2.png" alt="almar">
+                  <img src="img/p2.png" alt="almar">
               </div>
               <div class="f3">
-                <img src="imagenes/p3.png" alt="almar">
+                <img src="img/p3.png" alt="almar">
               </div>
 
        </section >
           <section class="imagenes">
             <div class="f4">
-              <img src="imagenes/p4.png" alt="almar">
+              <img src="img/p4.png" alt="almar">
             </div>
 
             <div class="f5">
-              <img src="imagenes/p5.png" alt="almar">
+              <img src="img/p5.png" alt="almar">
             </div>
             <div class="f6">
-              <img src="imagenes/p6.png" alt="almar">
+              <img src="img/p6.png" alt="almar">
             </div>
           </section>
 
