--- a/retratos.html
+++ b/retratos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Examen Final </title>
       <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div class="container">
@@ -23,25 +23,25 @@
 
           <section class ="retratos">
             <div class="r1">
-              <img src="imagenes/i1.png" alt="almar">
+              <img src="img/i1.png" alt="almar">
             </div>
             <div class="r2">
-              <img src="imagenes/i2.jpg" alt="almar">
+              <img src="img/i2.jpg" alt="almar">
             </div>
             <div class="r3">
-              <img src="imagenes/i3.jpg" alt="almar">
+              <img src="img/i3.jpg" alt="almar">
             </div>
         </section >
 
           <section class="retratos">
             <div class="r4">
-              <img src="imagenes/i4.jpg" alt="almar">
+              <img src="img/i4.jpg" alt="almar">
             </div>
             <div class="r5">
-              <img src="imagenes/i5.jpg" alt="almar">
+              <img src="img/i5.jpg" alt="almar">
             </div>
             <div class="r6">
-              <img src="imagenes/196.png" alt="almar">
+              <img src="img/196.png" alt="almar">
             </div>
 
 
