add a new button

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <body>
     <div class="container">
     <header>
-          <h1><p>Comenzando con la Fotografia</p></h1>
+          <h1><p>Photos</p></h1>
             <nav>
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="paisajes.html">Paisajes</a></li>
-        <li><a href="retratos.html">Retratos</a></li>
+        <li><a  class="nava" href="index.html">Home</a></li>
+        <li><a  class="nava" href="paisajes.html">Landscapes</a></li>
+        <li><a  class="nava" href="retratos.html">Pictures</a></li>
       </ul>
     </nav>
+    <button  id="btn">Added New</button>
     </header>
     <section class ="contenido">
       <div class="primera">
